--- a/SentimentTraining/.classpath
+++ b/SentimentTraining/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="/Users/maxzhou/Dev/lingpipe-4.1.0/demos/tutorial/sentiment/sentimentDemo.jar"/>
 	<classpathentry kind="lib" path="/Users/maxzhou/Downloads/pic/lombok.jar"/>
 	<classpathentry kind="lib" path="/Users/maxzhou/Dev/google-gson-2.2.4/gson-2.2.4.jar"/>
+	<classpathentry kind="con" path="com.amazonaws.eclipse.sdk.AWS_JAVA_SDK"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
