--- a/SentimentTraining/.classpath
+++ b/SentimentTraining/.classpath
@@ -7,5 +7,12 @@
 	<classpathentry kind="lib" path="/Users/maxzhou/Downloads/pic/lombok.jar"/>
 	<classpathentry kind="lib" path="/Users/maxzhou/Dev/google-gson-2.2.4/gson-2.2.4.jar"/>
 	<classpathentry kind="con" path="com.amazonaws.eclipse.sdk.AWS_JAVA_SDK"/>
+	<classpathentry kind="lib" path="/Users/maxzhou/Dev/commons-io-2.4/commons-io-2.4-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/maxzhou/Dev/commons-io-2.4/commons-io-2.4-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/maxzhou/Dev/commons-io-2.4/commons-io-2.4-test-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/maxzhou/Dev/commons-io-2.4/commons-io-2.4-tests.jar"/>
+	<classpathentry kind="lib" path="/Users/maxzhou/Dev/commons-io-2.4/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="/Users/maxzhou/Downloads/commons-lang3-3.3.2/commons-lang3-3.3.2-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/maxzhou/Downloads/commons-lang3-3.3.2/commons-lang3-3.3.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
